add wallet activity
